# mimicpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  FUNDING.yml  Folder.DotSettings  README.md  annotated.html  annotated_dup.js  classes.html  concepts.html  concepts.js  dir_000001_000003.html  dir_000001_000006.html  dir_000001_000011.html  dir_000002_000003.html  dir_000002_000005.html  dir_000002_000009.html  dir_000003_000001.html  dir_000003_000002.html  dir_000003_000004.html  dir_000003_000005.html  dir_000003_000006.html  dir_000003_000008.html  dir_000003_000009.html  dir_000003_000010.html  dir_000003_000014.html  dir_000004_000001.html  dir_000004_000002.html  dir_000004_000003.html  dir_000004_000005.html  dir_000004_000006.html  dir_000004_000007.html  dir_000004_000008.html  dir_000004_000009.html  dir_000004_000010.html  dir_000004_000011.html  dir_000004_000013.html  dir_000005_000001.html  dir_000005_000002.html  (+619 more)
cmake/: EnableAdditionalTestFlags.cmake  EnableConfigOptions.cmake  EnableCoverageFlags.cmake  EnableSanitizers.cmake  EnableWarnings.cmake  FIndsanitizers-cmake.cmake  FindCatch2.cmake  Findcpptrace.cmake  Findlibassert.cmake  Findmimicpp-cpptrace.cmake  Findmimicpp-fmt.cmake  Findmimicpp-uni-algo.cmake  Findsanitizers-cmake.cmake  Findtrompeloeil.cmake  InstallRules.cmake  LinkStdStacktrace.cmake  Mimic++-EnableAdditionalTestFlags.cmake  Mimic++-EnableConfigOptions.cmake  Mimic++-HasStdStacktrace.cmake  Mimic++-InstallRules.cmake  Mimic++-InternalTargets.cmake  Mimic++-ReadProjectVersion.cmake  SetupTestTarget.cmake  get_cpm.cmake  mimic++-configuration-options.cmake  (+1 more)
docs/: CMakeLists.txt  Doxyfile.in  FrameworkConfig.hpp  gitignore.txt  mimic++_cheat-sheet.drawio
examples/: CMakeLists.txt  CustomMatcher.cpp  CustomPrinter.cpp  CustomString.cpp  Deprecated_InterfaceMock.cpp  ExpectationHandling.cpp  FacadeMock.cpp  Finalizers.cpp  InterfaceMock.cpp  Mock.cpp  RegisterCallConvention.cpp  Requirements.cpp  Sequences.cpp  SideEffects.cpp  Times.cpp  VariadicMocks.cpp  Watcher.cpp
module/: CMakeLists.txt  mimic++.cppm
module/include/mimic++/: MacroExports.hpp
search/: all_0.js  (+183 more)
test/: CMakeLists.txt  Call.cpp  CallProperties.cpp  ComplexMock.cpp  Expectation.cpp  ExpectationBuilder.cpp  ExpectationPolicies.cpp  Matcher.cpp  Mock.cpp  Printer.cpp  Reporter.cpp  Sequence.cpp  TestAssert.hpp  TestReporter.hpp  TestTypes.hpp  TypeTraits.cpp  Utility.cpp
test/adapter-tests/: CMakeLists.txt
test/adapter-tests/boost-test/: CMakeLists.txt  main.cpp
test/adapter-tests/catch2/: CMakeLists.txt  main.cpp
test/adapter-tests/doctest/: CMakeLists.txt  main.cpp
test/adapter-tests/gtest/: CMakeLists.txt  main.cpp
test/cmake/: FindBoost.cmake  FindCatch2.cmake  Findlibassert.cmake  Findtrompeloeil.cmake  Mimic++-EnableWarnings.cmake
test/compile-errors/: CMakeLists.txt  manual-init-finalize-policy.cpp  missing-finalizer-for-non-void.cpp  multiple-finalize-policies.cpp  multiple-times-policies.cpp
test/custom-source-location-tests/: CMakeLists.txt  CustomSourceLocation.cpp  CustomSourceLocation.hpp  EqualityComparison.cpp
test/custom-stacktrace-tests/: CMakeLists.txt  CustomStacktrace.cpp  CustomStacktrace.hpp  EqualityComparison.cpp  Printing.cpp
test/module-test/: CMakeLists.txt  main.cpp
test/package-test/: CMakeLists.txt  RunTest.cmake
test/package-test/package-consumer/: CMakeLists.txt  main.cpp
test/stacktrace-tests/: CMakeLists.txt  test.cpp
test/stacktrace-tests/custom/: CMakeLists.txt  Printing.cpp
test/test-basics/: CMakeLists.txt  TestAssert.hpp
test/unicode-str-matcher-tests/: CMakeLists.txt  StringContains.cpp  StringEndsWith.cpp  StringEq.cpp  StringStartsWith.cpp
test/unit-tests/: ArgRequirementPolicies.cpp  ArgumentList.cpp  CMakeLists.txt  Call.cpp  Catch2FallbackStringifier.hpp  Config.cpp  ControlPolicy.cpp  Expectation.cpp  ExpectationBuilder.cpp  ExpectationPolicies.cpp  Facade.cpp  InterfaceMock.cpp  LifetimeWatcher.cpp  Matcher.cpp  Mock.cpp  ObjectWatcher.cpp  Printer.cpp  Reporter.cpp  Reports.cpp  ScopedSequence.cpp  Sequence.cpp  Stacktrace.cpp  String.cpp  StringMatchers.cpp  SuppressionMacros.hpp  TestReporter.hpp  TestTypes.hpp  TrompeloeilExt.hpp  TypeTraits.cpp  Utility.cpp  mimic++.cpp
test/unit-tests/call-conventions/: CMakeLists.txt  GccCallConvention.cpp  Vectorcall.cpp
test/unit-tests/config/: CMakeLists.txt  Config.cpp  Version.cpp
test/unit-tests/expectation/: Builder.cpp  CMakeLists.txt  Collector.cpp  Common.cpp  Expectation.cpp  Owner.cpp  Registry.cpp
test/unit-tests/expectation/policies/: ArgRequirementPolicies.cpp  ArgumentList.cpp  CMakeLists.txt  ControlPolicies.cpp  FinalizerPolicies.cpp  GeneralPolicies.cpp  SideEffectPolicies.cpp
test/unit-tests/facade/: CMakeLists.txt  Common.hpp  Generators.cpp  Limits.cpp  Traits.cpp
test/unit-tests/macros/: CMakeLists.txt  Common.cpp  Facade.cpp  FacadeHelper.cpp
test/unit-tests/matchers/: CMakeLists.txt  Common.cpp  FloatingPointMatchers.cpp  GeneralMatchers.cpp  RangeMatchers.cpp  StringContains.cpp  StringEndsWith.cpp  StringEq.cpp  StringStartsWith.cpp
test/unit-tests/policies/: ArgRequirementPolicies.cpp  ArgumentList.cpp  CMakeLists.txt  ControlPolicies.cpp  FinalizerPolicies.cpp  GeneralPolicies.cpp  SideEffectPolicies.cpp
test/unit-tests/printing/: CMakeLists.txt  ContainerTypePrinting.cpp  Format.cpp  FunctionTypePostProcessing.cpp  PathPrinter.cpp  ScopeNavigator.cpp  SourceLocationPostProcessing.cpp  StatePrinter.cpp  TypeNameLexer.cpp  TypeNameParser.cpp  TypePostProcessing.cpp  TypePrinter.cpp  TypeScopeIterator.cpp
test/unit-tests/reporting/: BasicReporter.cpp  CMakeLists.txt  CallReport.cpp  DefaultReporter.cpp  ExpectationReport.cpp  GlobalReporter.cpp  MatchReport.cpp  NoMatchReport.cpp  StringifyReports.cpp  TargetReport.cpp  TypeReport.cpp
test/unit-tests/signature-traits/: AddRefQualifier.cpp  CMakeLists.txt  Common.hpp
test/unit-tests/utilities/: Algorithm.cpp  C++23Backports.cpp  CMakeLists.txt  Concepts.cpp  Regex.cpp  SourceLocation.cpp  Stacktrace.cpp  StaticString.cpp  TypeList.cpp
(+3505 files in other folders)
