#          Copyright Dominic (DNKpp) Koepke 2024 - 2025.
# Distributed under the Boost Software License, Version 1.0.
#    (See accompanying file LICENSE_1_0.txt or copy at
#          https://www.boost.org/LICENSE_1_0.txt)

add_subdirectory("boost-test")
add_subdirectory("catch2")
add_subdirectory("doctest")
add_subdirectory("gtest")
